--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+.loader-gif {
+  background: white url('assets/loader.gif') no-repeat center center;
+  z-index: 10;
+  height: 100px;
+  width: 100%;
+}
