--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,1 @@
-<h1>Schedule Manager</h1>
-<div *ngIf="!isReady" class="loader-gif"></div>
-<div *ngIf="isReady">
-  <app-tab [id]="currentTabId"></app-tab>
-  <ul>
-    <li *ngFor="let tab of tabs">
-      <span>{{tab.tabId}}</span>
-      <p>{{tab.tabName}}</p>
-    </li>
-  </ul>
-</div>
+<app-app-view></app-app-view>
